--- a/gallery.html
+++ b/gallery.html
@@ -120,17 +120,69 @@
       </nav>
     </header>
 
+    <!-- hero section -->
     <section>
-      <div class="pt-[2%] md:pt-[0.2%] w-full">
-        <div class="flex">
+      <div class="relative flex w-[100%]">
+        <div class="relative flex w-[100%] overflow-hidden">
           <img
-            class="w-[100vw] h-[88vw] object-cover"
-            src="assets/images/about us/about us mobile 1.jpeg"
+            class="flex w-[100vw] h-[88vw] md:w-[100vw] md:h-[33.86vw] object-cover   md:object-[0%_22%]"
+            src="assets/images/gallery/hero section.jfif"
             alt=""
           />
+          
+          <div
+            class="absolute inset-0 backdrop-blur-[10px] bg-01/50 md:w-[50vw]"
+          >
+            <img
+              class="absolute mt-[-11%] w-[15.9vw] hidden md:block"
+              src="assets/images/leaf.svg"
+              alt=""
+            />
+            <img
+              class="w-[19.2vw] md:w-[8.55vw] ml-[41.6vw] md:ml-[29.22vw] mt-[17vw] md:mt-[8vw]"
+              src="assets/images/stars white.svg"
+              alt=""
+            />
+            <div
+              class="ml-[5%] md:ml-[0%] text-[7vw] md:text-[3vw] font-playfair font-[700] text-white flex flex-col md:ml-[25%] mt-[4%] md:mt-[-2%]"
+            >
+              <h3>Gallery</h3>
+              <div
+                class="h-[0.7vw] md:h-[0.2vw] mt-[1%] bg-gradient-to-r from-white to-white/0 w-[28vw] md:w-32 rounded-lg"
+              ></div>
+            </div>
+            <p
+              class="font-alex font-[400] text-[12vw] md:text-[7vw] mt-[20%] md:mt-[10%] text-03/15 justify-self-center md:ml-[-4%]"
+            >
+              Beauty & Brawn
+            </p>
+          </div>
         </div>
       </div>
     </section>
+
+    <!-- Image Section -->
+     <section>
+      <div class="relative flex  w-full  pt-[10%] ">
+       <div class="relative flex grid grid-cols-2 md:grid-cols-4 w-full  ml-[4%] mb-[10%]">
+        
+        <img class="md:h-[17.5vw] md:w-[38.85vw] col-span-2 hidden md:block object-cover  rounded-lg mt-[4%]" src="assets/images/gallery/g1.jfif" alt="">
+        <img class="w-[44vw] h-[38.4vw] md:h-[17.5vw] md:w-[13.85vw]  md:ml-[20%] object-cover object-right rounded-lg mt-[8%]" src="assets/images/about us/about us 3.jpeg" alt="">
+        <img class="w-[44vw] h-[38.4vw] md:h-[17.5vw] md:col-start-auto	 object-cover object-center rounded-lg mt-[8%]" src="assets/images/gallery/g2.jfif" alt="">
+        <img class="w-[44vw] h-[38.4vw] md:h-[17.5vw] object-cover object-center rounded-lg mt-[8%]" src="assets/images/services details/second section third img.jpeg" alt="">
+        <img class="w-[44vw] h-[38.4vw] md:h-[17.5vw] object-cover object-center rounded-lg mt-[8%]" src="assets/images/gallery/g4.jfif" alt="">
+        <img class="w-[44vw] h-[38.4vw] md:h-[17.5vw] object-cover object-top rounded-lg mt-[8%]" src="assets/images/gallery/g5.jfif" alt="">
+        <img class="w-[44vw] h-[38.4vw] md:h-[17.5vw] object-cover object-top rounded-lg mt-[8%]" src="assets/images/about us/follow us 3.jpeg" alt="">
+        <img class="w-[44vw] h-[38.4vw] md:h-[17.5vw] object-cover object-[0%_20%] rounded-lg mt-[8%]" src="assets/images/gallery/g7.jfif" alt="">
+        <img class="w-[44vw] h-[38.4vw] md:h-[17.5vw] object-cover  rounded-lg mt-[8%]" src="assets/images/about us/about us 1.jpeg" alt="">
+        <img class="w-[44vw] h-[38.4vw] md:h-[17.5vw] object-cover  rounded-lg mt-[8%]" src="assets/images/gallery/g9.jfif" alt="">
+        <img class="w-[44vw] h-[38.4vw] md:h-[17.5vw] object-cover  rounded-lg mt-[8%]" src="assets/images/your skin.jpeg" alt="">
+        <img class="w-[44vw] h-[38.4vw] md:h-[17.5vw] object-cover object-right rounded-lg mt-[8%]" src="assets/images/gallery/g11.jfif" alt="">
+        <img class="w-[44vw] h-[38.4vw] md:h-[17.5vw] object-cover  rounded-lg mt-[8%]" src="assets/images/about us/about 4.jpeg" alt="">
+
+       </div>
+      </div>
+     </section>
 
     <footer>
       <div
