--- a/blog.html
+++ b/blog.html
@@ -133,8 +133,8 @@
                 <p class="text-left font-playfair font-[600] text-01 text-[5vw] md:text-[1.3vw]">A Revolutionary
                   Approach to Regaining Your Confidence</p>
                 <div class="flex flex-row gap-2">
-                  <p class="py-[2%] text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
-                  <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt="">
+                  <a class="flex flex-row gap-2 py-[2%]" href="blog-details.html"><p class=" text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
+                    <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt=""></a>
                 </div>
               </div>
             </div>
@@ -160,8 +160,8 @@
               <div class="mt-[-1%] p-[3%] bg-white border-x-01 border-b-01 border-2 rounded-b-lg">
                 <p class="text-left font-playfair font-[600] text-01 text-[5vw] md:text-[1.3vw]">The Marvels of Sculptra at Beauty & Brawn Aesthetics</p>
                 <div class="flex flex-row gap-2">
-                  <p class="py-[2%] text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
-                  <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt="">
+                  <a class="flex flex-row gap-2 py-[2%]" href="blog-details.html"><p class=" text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
+                    <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt=""></a>
                 </div>
               </div>
             </div>
@@ -187,8 +187,8 @@
               <div class="mt-[-1%] p-[3%] bg-white border-x-01 border-b-01 border-2 rounded-b-lg">
                 <p class="text-left font-playfair font-[600] text-01 text-[5vw] md:text-[1.3vw]">Exploring the Benefits of Microneedling and PRP Therapy</p>
                 <div class="flex flex-row gap-2">
-                  <p class="py-[2%] text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
-                  <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt="">
+                  <a class="flex flex-row gap-2 py-[2%]" href="blog-details.html"><p class=" text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
+                    <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt=""></a>
                 </div>
               </div>
             </div>
@@ -214,8 +214,8 @@
               <div class="mt-[-1%] p-[3%] bg-white border-x-01 border-b-01 border-2 rounded-b-lg">
                 <p class="text-left font-playfair font-[600] text-01 text-[5vw] md:text-[1.3vw]">The Ageless Appeal of Neurotoxin Treatment</p>
                 <div class="flex flex-row gap-2">
-                  <p class="py-[2%] text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
-                  <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt="">
+                  <a class="flex flex-row gap-2 py-[2%]" href="blog-details.html"><p class=" text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
+                    <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt=""></a>
                 </div>
               </div>
             </div>
@@ -240,8 +240,8 @@
               <div class="mt-[-1%] p-[3%] bg-white border-x-01 border-b-01 border-2 rounded-b-lg">
                 <p class="text-left font-playfair font-[600] text-01 text-[5vw] md:text-[1.3vw]">Capturing The World In Beautifly Frames</p>
                 <div class="flex flex-row gap-2">
-                  <p class="py-[2%] text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
-                  <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt="">
+                  <a class="flex flex-row gap-2 py-[2%]" href="blog-details.html"><p class=" text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
+                    <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt=""></a>
                 </div>
               </div>
             </div>
@@ -264,8 +264,8 @@
               <div class="mt-[-1%] p-[3%] bg-white border-x-01 border-b-01 border-2 rounded-b-lg">
                 <p class="text-left font-playfair font-[600] text-01 text-[5vw] md:text-[1.3vw]">Breathtaking Travel Spots To Add To Your Bucket List</p>
                 <div class="flex flex-row gap-2">
-                  <p class="py-[2%] text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
-                  <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt="">
+                  <a class="flex flex-row gap-2 py-[2%]" href="blog-details.html"><p class=" text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
+                    <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt=""></a>
                 </div>
               </div>
             </div>
@@ -288,8 +288,8 @@
               <div class="mt-[-1%] p-[3%] bg-white border-x-01 border-b-01 border-2 rounded-b-lg">
                 <p class="text-left font-playfair font-[600] text-01 text-[5vw] md:text-[1.3vw]">What To Do To Make Skin Healthy And Soft</p>
                 <div class="flex flex-row gap-2">
-                  <p class="py-[2%] text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
-                  <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt="">
+                  <a class="flex flex-row gap-2 py-[2%]" href="blog-details.html"><p class=" text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
+                    <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt=""></a>
                 </div>
               </div>
             </div>
@@ -312,8 +312,8 @@
               <div class="mt-[-1%] p-[3%] bg-white border-x-01 border-b-01 border-2 rounded-b-lg">
                 <p class="text-left font-playfair font-[600] text-01 text-[5vw] md:text-[1.3vw]">The Marvels of Sculptra at Beauty & Brawn Aesthetics</p>
                 <div class="flex flex-row gap-2">
-                  <p class="py-[2%] text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
-                  <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt="">
+                  <a class="flex flex-row gap-2 py-[2%]" href="blog-details.html"><p class=" text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
+                    <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt=""></a>
                 </div>
               </div>
             </div>
@@ -336,10 +336,10 @@
               <div class="mt-[-1%] p-[3%] bg-white border-x-01 border-b-01 border-2 rounded-b-lg">
                 <p class="text-left font-playfair font-[600] text-01 text-[5vw] md:text-[1.3vw]">A Revolutionary
                   Approach to Regaining Your Confidence</p>
-                <div class="flex flex-row gap-2">
-                  <p class="py-[2%] text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
-                  <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt="">
-                </div>
+                  <div class="flex flex-row gap-2">
+                    <a class="flex flex-row gap-2 py-[2%]" href="blog-details.html"><p class=" text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
+                      <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt=""></a>
+                  </div>
               </div>
             </div>
           </div>
