--- a/blog.html
+++ b/blog.html
@@ -110,7 +110,8 @@
 
       <!-- Blogs Div -->
       <!-- Blogs Container -->
-      <div id="blogsContainer" class="w-full md:w-[75vw] md:mx-auto flex flex-wrap md:grid md:grid-cols-3 md:gap-[3%]  mt-[10%] md:mt-[7%] ">
+      <div id="blogsContainer"
+        class="w-full md:w-[75vw] md:mx-auto flex flex-wrap md:grid md:grid-cols-3 md:gap-[3%]  mt-[10%] md:mt-[7%] ">
         <!-- Initial Blog Items (Visible by Default) -->
 
         <!-- A Revolutionary Approach to Regaining Your Confidence -->
@@ -133,8 +134,10 @@
                 <p class="text-left font-playfair font-[600] text-01 text-[5vw] md:text-[1.3vw]">A Revolutionary
                   Approach to Regaining Your Confidence</p>
                 <div class="flex flex-row gap-2">
-                  <a class="flex flex-row gap-2 py-[2%]" href="blog-details.html"><p class=" text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
-                    <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt=""></a>
+                  <a class="flex flex-row gap-2 py-[2%]" href="blog-details.html">
+                    <p class=" text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
+                    <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt="">
+                  </a>
                 </div>
               </div>
             </div>
@@ -158,10 +161,13 @@
               <img class="rounded-t-lg object-cover h-[53.34vw] md:h-[12.87vw] w-[92vw] md:w-[23.6vw]"
                 src="assets/images/about us/about us 2.jpeg" alt="">
               <div class="mt-[-1%] p-[3%] bg-white border-x-01 border-b-01 border-2 rounded-b-lg">
-                <p class="text-left font-playfair font-[600] text-01 text-[5vw] md:text-[1.3vw]">The Marvels of Sculptra at Beauty & Brawn Aesthetics</p>
+                <p class="text-left font-playfair font-[600] text-01 text-[5vw] md:text-[1.3vw]">The Marvels of Sculptra
+                  at Beauty & Brawn Aesthetics</p>
                 <div class="flex flex-row gap-2">
-                  <a class="flex flex-row gap-2 py-[2%]" href="blog-details.html"><p class=" text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
-                    <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt=""></a>
+                  <a class="flex flex-row gap-2 py-[2%]" href="blog-details.html">
+                    <p class=" text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
+                    <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt="">
+                  </a>
                 </div>
               </div>
             </div>
@@ -185,10 +191,13 @@
               <img class="rounded-t-lg object-cover h-[53.34vw] md:h-[12.87vw] w-[92vw] md:w-[23.6vw]"
                 src="assets/images/about us/follow us 6.jpeg" alt="">
               <div class="mt-[-1%] p-[3%] bg-white border-x-01 border-b-01 border-2 rounded-b-lg">
-                <p class="text-left font-playfair font-[600] text-01 text-[5vw] md:text-[1.3vw]">Exploring the Benefits of Microneedling and PRP Therapy</p>
+                <p class="text-left font-playfair font-[600] text-01 text-[5vw] md:text-[1.3vw]">Exploring the Benefits
+                  of Microneedling and PRP Therapy</p>
                 <div class="flex flex-row gap-2">
-                  <a class="flex flex-row gap-2 py-[2%]" href="blog-details.html"><p class=" text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
-                    <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt=""></a>
+                  <a class="flex flex-row gap-2 py-[2%]" href="blog-details.html">
+                    <p class=" text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
+                    <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt="">
+                  </a>
                 </div>
               </div>
             </div>
@@ -212,10 +221,13 @@
               <img class="rounded-t-lg object-cover h-[53.34vw] md:h-[12.87vw] w-[92vw] md:w-[23.6vw]"
                 src="assets/images/gallery/g1.jfif" alt="">
               <div class="mt-[-1%] p-[3%] bg-white border-x-01 border-b-01 border-2 rounded-b-lg">
-                <p class="text-left font-playfair font-[600] text-01 text-[5vw] md:text-[1.3vw]">The Ageless Appeal of Neurotoxin Treatment</p>
+                <p class="text-left font-playfair font-[600] text-01 text-[5vw] md:text-[1.3vw]">The Ageless Appeal of
+                  Neurotoxin Treatment</p>
                 <div class="flex flex-row gap-2">
-                  <a class="flex flex-row gap-2 py-[2%]" href="blog-details.html"><p class=" text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
-                    <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt=""></a>
+                  <a class="flex flex-row gap-2 py-[2%]" href="blog-details.html">
+                    <p class=" text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
+                    <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt="">
+                  </a>
                 </div>
               </div>
             </div>
@@ -238,10 +250,13 @@
               <img class="rounded-t-lg object-cover h-[53.34vw] md:h-[12.87vw] w-[92vw] md:w-[23.6vw]"
                 src="assets/images/blogs/b5.jfif" alt="">
               <div class="mt-[-1%] p-[3%] bg-white border-x-01 border-b-01 border-2 rounded-b-lg">
-                <p class="text-left font-playfair font-[600] text-01 text-[5vw] md:text-[1.3vw]">Capturing The World In Beautifly Frames</p>
+                <p class="text-left font-playfair font-[600] text-01 text-[5vw] md:text-[1.3vw]">Capturing The World In
+                  Beautifly Frames</p>
                 <div class="flex flex-row gap-2">
-                  <a class="flex flex-row gap-2 py-[2%]" href="blog-details.html"><p class=" text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
-                    <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt=""></a>
+                  <a class="flex flex-row gap-2 py-[2%]" href="blog-details.html">
+                    <p class=" text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
+                    <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt="">
+                  </a>
                 </div>
               </div>
             </div>
@@ -262,10 +277,13 @@
               <img class="rounded-t-lg object-cover h-[53.34vw] md:h-[12.87vw] w-[92vw] md:w-[23.6vw]"
                 src="assets/images/services details/second section third img.jpeg" alt="">
               <div class="mt-[-1%] p-[3%] bg-white border-x-01 border-b-01 border-2 rounded-b-lg">
-                <p class="text-left font-playfair font-[600] text-01 text-[5vw] md:text-[1.3vw]">Breathtaking Travel Spots To Add To Your Bucket List</p>
+                <p class="text-left font-playfair font-[600] text-01 text-[5vw] md:text-[1.3vw]">Breathtaking Travel
+                  Spots To Add To Your Bucket List</p>
                 <div class="flex flex-row gap-2">
-                  <a class="flex flex-row gap-2 py-[2%]" href="blog-details.html"><p class=" text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
-                    <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt=""></a>
+                  <a class="flex flex-row gap-2 py-[2%]" href="blog-details.html">
+                    <p class=" text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
+                    <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt="">
+                  </a>
                 </div>
               </div>
             </div>
@@ -286,10 +304,13 @@
               <img class="rounded-t-lg object-cover h-[53.34vw] md:h-[12.87vw] w-[92vw] md:w-[23.6vw]"
                 src="assets/images/blogs/b7.jfif" alt="">
               <div class="mt-[-1%] p-[3%] bg-white border-x-01 border-b-01 border-2 rounded-b-lg">
-                <p class="text-left font-playfair font-[600] text-01 text-[5vw] md:text-[1.3vw]">What To Do To Make Skin Healthy And Soft</p>
+                <p class="text-left font-playfair font-[600] text-01 text-[5vw] md:text-[1.3vw]">What To Do To Make Skin
+                  Healthy And Soft</p>
                 <div class="flex flex-row gap-2">
-                  <a class="flex flex-row gap-2 py-[2%]" href="blog-details.html"><p class=" text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
-                    <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt=""></a>
+                  <a class="flex flex-row gap-2 py-[2%]" href="blog-details.html">
+                    <p class=" text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
+                    <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt="">
+                  </a>
                 </div>
               </div>
             </div>
@@ -310,10 +331,13 @@
               <img class="rounded-t-lg object-cover h-[53.34vw] md:h-[12.87vw] w-[92vw] md:w-[23.6vw]"
                 src="assets/images/bb product.jpeg" alt="">
               <div class="mt-[-1%] p-[3%] bg-white border-x-01 border-b-01 border-2 rounded-b-lg">
-                <p class="text-left font-playfair font-[600] text-01 text-[5vw] md:text-[1.3vw]">The Marvels of Sculptra at Beauty & Brawn Aesthetics</p>
+                <p class="text-left font-playfair font-[600] text-01 text-[5vw] md:text-[1.3vw]">The Marvels of Sculptra
+                  at Beauty & Brawn Aesthetics</p>
                 <div class="flex flex-row gap-2">
-                  <a class="flex flex-row gap-2 py-[2%]" href="blog-details.html"><p class=" text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
-                    <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt=""></a>
+                  <a class="flex flex-row gap-2 py-[2%]" href="blog-details.html">
+                    <p class=" text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
+                    <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt="">
+                  </a>
                 </div>
               </div>
             </div>
@@ -336,10 +360,12 @@
               <div class="mt-[-1%] p-[3%] bg-white border-x-01 border-b-01 border-2 rounded-b-lg">
                 <p class="text-left font-playfair font-[600] text-01 text-[5vw] md:text-[1.3vw]">A Revolutionary
                   Approach to Regaining Your Confidence</p>
-                  <div class="flex flex-row gap-2">
-                    <a class="flex flex-row gap-2 py-[2%]" href="blog-details.html"><p class=" text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
-                      <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt=""></a>
-                  </div>
+                <div class="flex flex-row gap-2">
+                  <a class="flex flex-row gap-2 py-[2%]" href="blog-details.html">
+                    <p class=" text-left font-manrope font-[700] text-01 text-[3.7vw] md:text-[1vw]">Read More</p>
+                    <img class="w-[3.5vw] md:w-[1vw]" src="assets/images/arrows.svg" alt="">
+                  </a>
+                </div>
               </div>
             </div>
           </div>
@@ -356,21 +382,16 @@
       </div>
       <div class="hidden md:block absolute ml-[85%] mt-[2%]">
         <img class="w-[5vw]" src="assets/images/stars.svg" alt="">
-     </div>
-     <div class="hidden md:block absolute ml-[8%] mt-[75%]">
+      </div>
+      <div class="hidden md:block absolute ml-[8%] mt-[75%]">
         <img class="w-[5vw]" src="assets/images/stars.svg" alt="">
-     </div>
-     <div class="absolute hidden md:block left-0 mt-[-1%]">
-      <img class="w-[10vw] scale-x-[-1]" src="assets/images/flower 2.svg" alt="" />
-    </div>
-    <div class="hidden w-[10vw] md:flex absolute right-[-1%] mt-[-1.5%]">
-      <img src="assets/images/footer leafs.svg" alt="" />
-    </div>
-
-      <script>
-
-      </script>
-
+      </div>
+      <div class="absolute hidden md:block left-0 mt-[-1%]">
+        <img class="w-[10vw] scale-x-[-1]" src="assets/images/flower 2.svg" alt="" />
+      </div>
+      <div class="hidden w-[10vw] md:flex absolute right-[-1%] mt-[-1.5%]">
+        <img src="assets/images/footer leafs.svg" alt="" />
+      </div>
 
 
     </div>
