--- a/contactUs.html
+++ b/contactUs.html
@@ -111,15 +111,16 @@
       </div>
 
 
-      <div class="relative w-[92vw] flex flex-col bg-05/50 rounded-lg p-[5%] mx-auto mt-[10%]">
-        <div class="flex ">
-          <iframe class="rounded-lg w-[81.34vw] h-[69.87vw]"
+      <div
+        class=" relative w-[92vw] md:w-[75vw] md:justify-between flex flex-col md:flex-row bg-05/50 rounded-lg p-[5%] md:p-[3%] mx-auto mt-[10%] md:mt-[8%]">
+        <div class="flex md:order-2">
+          <iframe class="rounded-lg w-[81.34vw] md:w-[35.94vw] h-[69.87vw] md:h-[28.96vw]"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62735.88965829414!2d-118.487650701062!3d34.27025132512936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c29ae9e3b761df%3A0xc9e6ed251ce63258!2s17539%20Chatsworth%20St%2C%20Granada%20Hills%2C%20CA%2091344%2C%20USA!5e0!3m2!1sen!2sin!4v1735844535647!5m2!1sen!2sin"
             allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-        <div class="relative flex mt-[5%] flex-col">
+        <div class="md:order-1 relative flex mt-[5%] md:mt-[0%] flex-col">
           <div
-            class="w-full  text-[7vw]  md:text-[2.5vw]  md:w-[60%]  md:mt-[2%] mb-[5%] font-playfair font-[800] text-01 flex flex-col">
+            class="w-full  text-[7vw]  md:text-[2.5vw]  md:w-[60%]  md:mt-[0%] mb-[5%] font-playfair font-[800] text-01 flex flex-col">
             <h3 class="">Contact Us</h3>
             <div class="h-[0.4vw] md:h-[0.15vw] bg-gradient-to-r from-01 to-03 w-[40%] md:w-[8vw]   ">
             </div>
@@ -127,18 +128,18 @@
           <div>
             <form action="">
               <input
-                class="w-[81.34vw] md:w-[21.99vw] h-[12.54vw] md:h-[3.65vw] pl-[4%] mb-[3%] text-02 text-[4.5vw] md:text-[1.2vw] font-outfit font-[500] border border-1 border-02/20 rounded-lg focus:outline-none focus:ring-1 focus:ring-01 focus:border-01"
+                class="w-[81.34vw] md:w-[29.69vw] h-[12.54vw] md:h-[3.29vw] pl-[4%] mb-[3%] text-02 text-[4.5vw] md:text-[1.2vw] font-outfit font-[500] border border-1 border-02/20 rounded-lg focus:outline-none focus:ring-1 focus:ring-01 focus:border-01"
                 type="text" name="" id="" placeholder="First Name"><br>
               <input
-                class="w-[81.34vw] md:w-[21.99vw] h-[12.54vw] md:h-[3.65vw] pl-[4%] mb-[3%] text-02 text-[4.5vw] md:text-[1.2vw] font-outfit font-[500] border border-1 border-02/20 rounded-lg focus:outline-none focus:ring-1 focus:ring-01 focus:border-01"
+                class="w-[81.34vw] md:w-[29.69vw] h-[12.54vw] md:h-[3.29vw] pl-[4%] mb-[3%] text-02 text-[4.5vw] md:text-[1.2vw] font-outfit font-[500] border border-1 border-02/20 rounded-lg focus:outline-none focus:ring-1 focus:ring-01 focus:border-01"
                 type="text" name="" id="" placeholder="Last Name"><br>
               <input
-                class="w-[81.34vw] md:w-[21.99vw] h-[12.54vw] md:h-[3.65vw] pl-[4%] mb-[3%] text-02 text-[4.5vw] md:text-[1.2vw] font-outfit font-[500] border border-1 border-02/20 rounded-lg focus:outline-none focus:ring-1 focus:ring-01 focus:border-01"
+                class="w-[81.34vw] md:w-[29.69vw] h-[12.54vw] md:h-[3.29vw] pl-[4%] mb-[3%] text-02 text-[4.5vw] md:text-[1.2vw] font-outfit font-[500] border border-1 border-02/20 rounded-lg focus:outline-none focus:ring-1 focus:ring-01 focus:border-01"
                 type="email" name="" id="" placeholder="Email"><br>
               <textarea
-                class="w-[81.34vw] md:w-[21.99vw] h-[31.2vw] md:h-[3.65vw] pl-[4%]      pt-[3%] text-02 text-[4.5vw] md:text-[1.2vw] font-outfit font-[500] border border-1 border-02/20 rounded-lg focus:outline-none focus:ring-1 focus:ring-01 focus:border-01"
+                class="w-[81.34vw] md:w-[29.69vw] h-[31.2vw] md:h-[6.25vw] pl-[4%] pt-[3%] text-02 text-[4.5vw] md:text-[1.2vw] font-outfit font-[500] border border-1 border-02/20 rounded-lg focus:outline-none focus:ring-1 focus:ring-01 focus:border-01"
                 name="" id="" rows="5" placeholder="Message"></textarea><br>
-              <button class="mt-[5%] md:mt-[0%]"><img class="w-[24.8vw] md:w-[15.9vw]   hover:scale-105 duration-300"
+              <button class="mt-[5%] md:mt-[5%]"><img class="w-[24.8vw] md:w-[7vw]   hover:scale-105 duration-300"
                   src="assets/images/submit btn.svg" alt=""></button>
             </form>
           </div>
@@ -148,24 +149,25 @@
   </section>
   <!-- Drop us a line -->
   <section>
-    <div class="relative flex flex-col w-[92vw] overflow-hidden mx-auto mt-[5%]">
+    <div class="relative flex flex-col w-[92vw] md:w-[75vw] overflow-hidden mx-auto mt-[5%] md:mt-[2%]">
       <div
-        class="w-full  text-[10vw]  md:text-[2.5vw]  md:w-[60%]  md:mt-[2%] mb-[5%] font-playfair font-[800] text-01 flex flex-col">
+        class="w-full  text-[10vw]  md:text-[2.5vw]  md:w-[60%]  md:mt-[2%] mb-[5%] md:mb-[2%] font-playfair font-[800] text-01 flex flex-col">
         <h3 class="">Drop us a line</h3>
         <div class="h-[0.4vw] md:h-[0.15vw] bg-gradient-to-r from-01 to-03 w-[40%] md:w-[8vw]   ">
         </div>
       </div>
 
       <div>
-        <div class="flex items-start font-outfit text-02 fomt-[400] text-[3.7vw]">
-          <img class="w-[4.9vw]" src="assets/images/leafs vector.svg" alt="">
+        <div class="flex items-start font-outfit text-02 fomt-[400] text-[3.7vw] md:text-[0.95vw] md:items-center ">
+          <img class="w-[4.9vw] md:w-[1.5vw]" src="assets/images/leafs vector.svg" alt="">
           <p class="ml-[1%] w-[84.8vw] ">By providing your phone number via paper/digital intake forms and/or website
             submissions, you consent to
             receive calls and text messages regarding appointments, marketing, and other information. No purchase is
             required. Message and data rates may apply.</p>
         </div>
-        <div class="flex items-start font-outfit text-02 fomt-[400] text-[3.7vw]">
-          <img class="w-[4.9vw]" src="assets/images/leafs vector.svg" alt="">
+        <div
+          class="flex items-start font-outfit text-02 fomt-[400] text-[3.7vw] md:text-[0.95vw] md:items-center md:mt-[1%]">
+          <img class="w-[4.9vw] md:w-[1.5vw]" src="assets/images/leafs vector.svg" alt="">
           <p class="ml-[1%] w-[84.8vw] ">Beauty and Brawn Aesthetics will send approximately 4 texts a month (maximum)
             offering special discounts and text-only deals. You may opt out at any time by replying STOP to the text
             message.</p>
@@ -175,22 +177,24 @@
   </section>
 
   <section>
-    <div class="relative flex flex-col w-[92vw] bg-gradient-to-r from-01 to-white/0 p-[2px] rounded-lg mx-auto my-[10%]">
+    <div
+      class="relative flex flex-col w-[92vw] md:w-[75vw] bg-gradient-to-r from-01 to-white/0 p-[2px] rounded-lg mx-auto my-[10%] md:mt-[3%]">
       <div class="rounded-lg bg-white">
-        <div class="relative flex flex-col bg-05/50 rounded-lg p-[5%] font-outfit font-[400] text-02 text-[4.5vw]">
-          <div class="flex flex-col  items-center text-center mt-[5%]">
-            <img class="w-[10.67vw]" src="assets/images/location.svg" alt="">
-            <p class="mt-[4%]">17539 Chatsworth St Granada Hills, CA 91344</p>
+        <div
+          class="relative flex flex-col md:flex-row bg-05/50 rounded-lg p-[5%] md:p-[3%] font-outfit font-[400] text-02 text-[4.5vw] md:text-[1vw] md:items-center md:justify-between">
+          <div class="flex flex-col md:flex-row  items-center text-center md:text-left mt-[5%] md:mt-[0%]">
+            <img class="w-[10.67vw] md:w-[2.65vw]" src="assets/images/location.svg" alt="">
+            <p class="mt-[4%] md:mt-[0%] md:ml-[3%] md:w-[17vw]">17539 Chatsworth St Granada Hills, CA 91344</p>
           </div>
-          <div class="border border-07 w-[65.06vw] md:w-[78%] mt-[5%] md:mt-[1.5%] mx-auto"></div>
-          <div class="flex flex-col  items-center text-center mt-[6%]">
-            <img class="w-[10.67vw]" src="assets/images/call.svg" alt="">
-            <p class="mt-[4%]">818-626-3507</p>
+          <div class="border border-07 w-[65.06vw] md:w-[0.1vw] md:h-[2.7vw] mt-[5%] md:mt-[0%] mx-auto md:mx-0"></div>
+          <div class="flex flex-col md:flex-row  items-center text-center mt-[6%] md:mt-[0%] ">
+            <img class="w-[10.67vw] md:w-[2.65vw]" src="assets/images/call.svg" alt="">
+            <p class="mt-[4%] md:mt-[0%] md:ml-[3%] md:w-[7vw]">818-626-3507</p>
           </div>
-          <div class="border border-07 w-[65.06vw] md:w-[78%] mt-[5%] md:mt-[1.5%] mx-auto"></div>
-          <div class="flex flex-col  items-center text-center mt-[6%]">
-            <img class="w-[10.67vw]" src="assets/images/mail.svg" alt="">
-            <p class="mt-[4%]">info@beautyandbrawnaesthetics.com</p>
+          <div class="border border-07 w-[65.06vw] md:w-[0.1vw] md:h-[2.7vw] mt-[5%] md:mt-[0%] mx-auto md:mx-0"></div>
+          <div class="flex flex-col md:flex-row  items-center text-center mt-[6%] md:mt-[0%] ">
+            <img class="w-[10.67vw] md:w-[2.65vw]" src="assets/images/mail.svg" alt="">
+            <p class="mt-[4%] md:mt-[0%] md:ml-[3%]">info@beautyandbrawnaesthetics.com</p>
           </div>
         </div>
       </div>
